Fix: Desktop layout issues... CSS 😌

--- a/style/pages/post.css
+++ b/style/pages/post.css
@@ -123,6 +123,7 @@ aside.toc:hover {
  */
 article {
 
+    max-width: var(--content-width);
     width: calc(100vw - 5em);
     margin: 0 auto;
 
